--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,8 @@ dev_dependencies:
   flutter_launcher_icons: 0.8.1
   test: 1.15.0
   mockito: 3.0.2
-  taker: 1.3.0
+  faker: 1.3.0
   image_test_utils: 1.0.0
-  
-  flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
