chore: Add Login Page

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,27 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Flutter",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/main/main.dart"
+        },
+        {
             "name": "Dart: Run all Tests",
             "type": "dart",
             "request": "launch",
             "program": "./test/"
         },
-        {
-            "name": "Curso-Flutter-Manguinhos",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "Curso-Flutter-Manguinhos (profile mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "Curso-Flutter-Manguinhos (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
     ]
 }
