--- a/android/launch.json
+++ b/android/launch.json
@@ -5,17 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "All Test",
-            "request": "launch",
-            "type": "dart",
-            "program": "test/"
-        },
-        {
             "name": "Flutter",
             "request": "launch",
             "type": "dart",
             "program": "lib/main/main.dart"
         },
-        
+        {
+            "name": "Dart: Run all Tests",
+            "type": "dart",
+            "request": "launch",
+            "program": "./test/"
+        },
     ]
 }
