--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,20 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: 0.8.1
-  test: 1.15.0
+  test: 1.15.0 
   mockito: 3.0.2
   faker: 1.3.0
   image_test_utils: 1.0.0
 
 flutter:
-
   uses-material-design: true
   assets: 
     - lib/ui/assets/
+
+flutter_icons:
+  android: false
+  ios: true
+  image_path_android: lib/ui/assets/icon/android.png
+  image_path_ios: lib/ui/assets/icon/ios.png
+  adaptive_icon_background: lib/ui/assets/icon/background.png
+  adaptive_icon_foreground: lib/ui/assets/icon/foreground.png
